[project]
name = "agents-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph (>=0.3.0,<0.4.0)",
    "langgraph-prebuilt (>=0.1.0,<0.2.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

